# qemu-tracer-llvmmc-resolver

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  resolver.cpp
capnp/: resolver_in_cpp.capnp  resolver_out_cpp.capnp
